<resources>
    <string name="app_name">smartlunches</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="tab_text_1">Upload Items</string>
    <string name="tab_text_2">View Orders</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="tab_text_3">Add Item</string>
    <string name="scanned_data">Scanning....</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="menu_search">Search</string>

</resources>